hledger/test/errors/unbalanced-txn.j
# hledger check

1/1
  a  1
